--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,2 @@
-# Autoload conf.php file
-php_value auto_prepend_file "/conf/conf.php"
-
 # Autoload heder.php file
-php_value auto_prepend_file "/header.php"
+php_value auto_prepend_file "header.php"
